--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-router-hash-link": "^1.2.0",
     "react-scripts": "1.1.4"
   },
-  "homepage": "http://http://des-tinyDM.github.io/portfolio-custom",
+  "homepage": "https://des-tinyDM.github.io/portfolio-custom",
   "scripts": {
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
